@@ -17,6 +17,7 @@ fix in :showrows command.
 added showcols command that was missing.
 handle hidden rows/cols in undo/redo of ir/ic/dr/dc
 handled issue #374
+added backwards search with '?'
 
 
 Pending
